Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111304

wasm: Cube example does not work

    XMLWordPrintable

Details

    • WebAssembly
    • 99c8eca3f (dev), 2b908ba8f (dev), 051ba4099 (dev), 0f1929837 (6.5), 6dc44dd12 (6.5), 9fbc5f1c7 (6.5), 84f9293ea (dev), 25fcded97 (dev), aebb04fc4 (6.5), 314340546 (6.5), 5ebb9a8bf (dev), 9749c6deb (6.5)

    Description

      For example Cube example does not work, but if it is changed to QOpenGLWindow it runs fine.

      Clear color works fine, but the issue is that any content, such as the cube itself, is rendered only for the very first frame, then nothing at all.

      Attachments

        1. cube.png
          114 kB
          Inho Lee
        For Gerrit Dashboard: QTBUG-111304
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are 7 open Gerrit changes