examples/opengl/cube/mainwidget.cpp
@@ -148,6 +148,7 @@ void MainWidget::paintGL()
     glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 
     texture->bind();
+    program.bind();
 
 //! [6]
     // Calculate model view transformation
